<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context="com.etrack.myapplication.fragment.CreateNewUserFragment">    <ScrollView        android:layout_width="match_parent"        android:layout_height="match_parent">        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:orientation="vertical"            android:paddingLeft="20dp"            android:paddingRight="20dp"            android:scrollbars="vertical">            <android.support.design.widget.TextInputLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_margin="@dimen/spacing_smaller_8">                <EditText                    android:id="@+id/etFirstName"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:hint="@string/first_name"                    android:inputType="text"                    android:textColor="#000000" />            </android.support.design.widget.TextInputLayout>            <android.support.design.widget.TextInputLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_margin="@dimen/spacing_smaller_8">                <EditText                    android:id="@+id/etLastName"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:hint="@string/last_name"                    android:inputType="text"                    android:textColor="#000000" />            </android.support.design.widget.TextInputLayout>            //email            <android.support.design.widget.TextInputLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_margin="@dimen/spacing_smaller_8">                <EditText                    android:id="@+id/etEmail"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:hint="@string/email"                    android:inputType="text"                    android:textColor="#000000" />            </android.support.design.widget.TextInputLayout>            //ct            <android.support.design.widget.TextInputLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_margin="@dimen/spacing_smaller_8">                <EditText                    android:id="@+id/etCt"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:hint="@string/contact"                    android:inputType="text"                    android:textColor="#000000" />            </android.support.design.widget.TextInputLayout>            //contry list            <Spinner                android:id="@+id/spBranchList"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:prompt="@string/entry_branch" />            <Spinner                android:id="@+id/spRoleList"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:prompt="@string/enter_role" />            //username            <!--     <Spinner                     android:id="@+id/spStateList"                     android:layout_width="match_parent"                     android:layout_height="wrap_content"                     android:entries="@array/country_arrays"                     android:prompt="@string/country_prompt" />-->            <android.support.design.widget.TextInputLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_margin="@dimen/spacing_smaller_8">                <EditText                    android:id="@+id/etUserName"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:hint="@string/username"                    android:inputType="text"                    android:textColor="#000000" />            </android.support.design.widget.TextInputLayout>            // pass            <android.support.design.widget.TextInputLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_margin="@dimen/spacing_smaller_8">                <EditText                    android:id="@+id/et_password"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:hint="@string/hint_password"                    android:inputType="textPassword"                    android:textColor="#000000" />            </android.support.design.widget.TextInputLayout>            <android.support.design.widget.TextInputLayout                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_margin="@dimen/spacing_smaller_8">                <EditText                    android:id="@+id/et_confirm_password"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:hint="@string/hint_confirm_password"                    android:inputType="textPassword"                    android:textColor="#000000" />            </android.support.design.widget.TextInputLayout>            <Button                android:id="@+id/btn_register"                android:layout_width="fill_parent"                android:layout_height="wrap_content"                android:layout_margin="@dimen/spacing_smaller_8"                android:background="@color/colorAccent"                android:text="@string/register"                android:textColor="@android:color/white" />        </LinearLayout>    </ScrollView></FrameLayout>