<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvProductList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scrollbars="vertical" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_scn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/btnaddProducts">

        <EditText
            android:id="@+id/et_scanItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing_tiny_4"
            android:hint="@string/item_barcode" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnaddProducts"
        style="@style/buttonRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnScanProducts"
        android:fontFamily="san-serif"
        android:padding="@dimen/spacing_small_10"
        android:text="@string/add_product"
        android:textSize="@dimen/font_large_20" />

    <Button
        android:id="@+id/btnScanProducts"
        android:layout_above="@+id/btnClose"
        style="@style/buttonRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="san-serif"
        android:padding="@dimen/spacing_small_10"
        android:text="@string/scan_product"
        android:textSize="@dimen/font_large_20" />

    <Button
        android:id="@+id/btnClose"
        style="@style/buttonRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:fontFamily="san-serif"
        android:padding="@dimen/spacing_small_10"
        android:text="@string/back"
        android:textSize="@dimen/font_large_20" />
 <!--   <Fa>-->
</RelativeLayout>
